--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   # - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
   - conda config --set channel_priority strict
   - conda env create -q -f environment_cpu_py38_torch15.yml
-  - conda activate deepsmlm_cpu
+  - conda activate decode_cpu
 
 script:
   - pytest decode/test
