--- a/config/template.yaml
+++ b/config/template.yaml
@@ -53,7 +53,7 @@ HyperParameter:
   channels_out:
   chweight_stat:
     - 1.0
-    - 0.0
+    - 1.0
   disabled_attributes:
   ds_lifetime:
   epoch_0:
@@ -81,7 +81,7 @@ InOut:
 PostProcessing: LookUp  # (blank) for no post-processing or LookUp, Consistency
 PostProcessingParam:
   raw_th: 0.5
-Scaling:  # if some values are missing they will be auto-set as described in the comment
+Scaling:  # if some values are missing they will be auto-set as described in the respective comments below
   input_scale:  # intensity_mu / 50
   input_offset:  # bg_uniform (mean)
   bg_max:  # 1.2 * upper limit of bg val
