--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -6,7 +6,7 @@ source:
      - path: ../..
 
 build:
-  number: 25
+  number: 26
 
 requirements:
   build:
@@ -22,7 +22,7 @@ requirements:
     - {{ pin_compatible('numpy', max_pin='x.x') }}
     - cudatoolkit=10.1  # [linux]
     - dotmap
-    - pytorch=1.4
+    - pytorch=1.5
     - torchvision
     - click
     - deprecated
@@ -57,4 +57,5 @@ about:
     # license_family: GPL
     # license_file: {{ SRC_DIR }}/LICENSE
     summary: "High-Density 3D Single-Molecule Localisation Microscopy using Convolutional Neural Networks."
-    description: "Experimental. Windows and macOS are CPU only, Linux assumes a CUDA capable GPU. Installation must (!) add the proper channels for the PyTorch dependencies: ```conda install -c haydnspass -c pytorch -c conda-forge decode```"
+    description: "Experimental. Windows and macOS are CPU only, Linux assumes a CUDA capable GPU. Installation must
+    (!) add the proper channels for the PyTorch dependencies: ```conda install decode -c haydnspass -c pytorch -c conda-forge```"
