--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   # - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
   - conda config --set channel_priority strict
-  - conda env create -q -f environment_cpu_py38_torch15.yml
+  - conda env create -q -f environment_cpu_py38_torch15.yaml
   - conda activate decode_cpu
 
 script:
