--- a/environment_docs.yaml
+++ b/environment_docs.yaml
@@ -7,6 +7,7 @@ channels:
 dependencies:
   - python>=3.8
   - decode
+  - recommonmark  # markdown for sphinx
   - sphinx
   - sphinx-autodoc-typehints
   - sphinx_rtd_theme
