--- a/environment_cpu.yaml
+++ b/environment_cpu.yaml
@@ -1,43 +1,39 @@
 name: decode_cpu
 
 channels:
-  - haydnspass
+  - Turagalab
   - pytorch
   - conda-forge
   - defaults
 
 dependencies:
-  - click
+  # for building (decode and splinepsf)
   - cmake=3.15
-  - deprecated
-  - dotmap
-  - h5py
-  - intel-openmp
-  - jupyter_contrib_nbextensions
-  - jupyterlab
-  - nb_conda
-  - matplotlib
   - ninja
-  - numpy
-  - opencv
-  - pandas
   - pybind11>=2.4
+
+  # actual package
   - python=3.8
-  - pytorch>=1.5.1
-  - pyyaml
+  - pytorch=1.5.1
+  - torchvision
+  - click
+  - deprecated
+  - h5py
+  - matplotlib
+  - pandas
   - pytest
-  - pytest-repeat
+  - pyyaml
   - requests
-  - scikit-image
-  - scikit-optimize
   - scipy
   - seaborn
-  - setuptools
   - scikit-image
   - scikit-learn
   - spline
-  - sqlite
   - tensorboard
   - tifffile
-  - torchvision
   - tqdm
+
+  # jupyter
+  - jupyter_contrib_nbextensions
+  - jupyterlab
+  - nb_conda
