--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -7,7 +7,7 @@ source:
 
 build:
   noarch: python
-  number: 1
+  number: 2
 
 requirements:
   build:
@@ -36,7 +36,7 @@ requirements:
     - scikit-image
     - scikit-learn
     - spline
-    - tensorboard
+    - tensorboard=2.2
     - tifffile
     - tqdm
 
