--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -55,4 +55,4 @@ about:
     # license_family: GPL
     # license_file: {{ SRC_DIR }}/LICENSE
     summary: "High-Density 3D Single-Molecule Localisation Microscopy using Convolutional Neural Networks."
-    description: "Installation must add the respective channels for the dependencies (i.e. PyTorch and the spline package): ```conda install decode -c Turagalab -c pytorch -c conda-forge```"
+    description: "Installation must add the respective channels for the dependencies (i.e. PyTorch and the spline package): ```conda install decode -c turagalab -c pytorch -c conda-forge```"
