--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -18,8 +18,8 @@ values =
 [bumpversion:part:build]
 
 [bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
+search = version='{current_version}',
+replace = version='{new_version}',
 
 [bumpversion:file:conda/decode/meta.yaml]
 search = version: "{current_version}"
