--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,18 +1,18 @@
 [bumpversion]
-current_version = 0.9.3.b0
+current_version = 0.9.3-beta.0
 commit = True
 tag = False
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\.(?P<release>[a-z]+)(?P<build>\d+)?
-serialize = 
-	{major}.{minor}.{patch}.{release}{build}
-	{major}.{minor}.{patch}
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)\.(?P<build>\d+))?
+serialize =
+    {major}.{minor}.{patch}-{release}.{build}
+    {major}.{minor}.{patch}
 
 [bumpversion:part:release]
 optional_value = rc
-first_value = a
+first_value = alpha
 values = 
-	a
-	b
+	alpha
+	beta
 	rc
 
 [bumpversion:part:build]
