add backport of importlib_resources

--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -7,7 +7,7 @@ source:
 
 build:
   noarch: python
-  number: 1
+  number: 0
 
 requirements:
   build:
@@ -19,13 +19,14 @@ requirements:
     - numpy {{ numpy }}
 
   run:
-    - python >=3.7,<4
+    - python >=3.6,<4
     - {{ pin_compatible('numpy', max_pin='x.x') }}
     - pytorch=1.5.1
     - torchvision
     - click
     - deprecated
     - h5py
+    - importlib_resources
     - matplotlib
     - pandas
     - pytest
@@ -42,7 +43,7 @@ requirements:
 
   test:
     requires:
-      - python >=3.7,<4
+      - python >=3.6,<4
       - pytest
     commands:
       - pytest --pyargs decode
