--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,10 +1,10 @@
 [bumpversion]
-current_version = 0.9.3-beta.3
+current_version = 0.9.3.beta.3
 commit = True
 tag = True
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)\.(?P<build>\d+))?
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)\.(?P<build>\d+))?
 serialize = 
-	{major}.{minor}.{patch}-{release}.{build}
+	{major}.{minor}.{patch}.{release}.{build}
 	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
