--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: decode
-  version: "0.9.3.rc.1"
+  version: "0.9.3.rc.1"  # do not modify by hand set and sync with bumpversion
 
 source:
      - path: ../..
