--- a/environment_cuda.yaml
+++ b/environment_cuda.yaml
@@ -21,6 +21,7 @@ dependencies:
   - click
   - deprecated
   - h5py
+  - line_profiler
   - matplotlib
   - pandas
   - pytest
@@ -35,7 +36,5 @@ dependencies:
   - tifffile
   - tqdm
 
-  # jupyter
-  - jupyter_contrib_nbextensions
-  - jupyterlab
-  - nb_conda
+  # add kernel to jupyter
+  - ipykernel
