--- a/environment_cpu.yaml
+++ b/environment_cpu.yaml
@@ -15,7 +15,7 @@ dependencies:
 
   # actual package
   - python=3.8
-  - pytorch=1.6
+  - pytorch=1.5.1
   - torchvision
   - click
   - deprecated
@@ -27,7 +27,7 @@ dependencies:
   - pyyaml
   - requests
   - scipy
-  - seaborn
+  - seaborn=0.10
   - scikit-image
   - scikit-learn
   - spline
