--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,17 +3,12 @@
 name: Test workflow
 
 # run manually
-on:
-  workflow_dispatch:
-    inputs:
-      name:
-        description: Arbitrary input
-        required: true
-        default: default input
+on: push
 
 jobs:
   output_job:
     runs-on: ubuntu-latest
     steps:
       - run: |
-        echo "Your input was ${{ github.event.inputs.name }}."
+        echo "PATH is $PATH"
+        echo "conda located at $CONDA"
