--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -5,6 +5,7 @@ name: Build DECODE and upload to Anaconda Cloud
 on: [push]
 
 jobs:
+  # this is a pure Python noarch build; we use Linux for convenience
   build-linux:
     runs-on: ubuntu-latest
 
@@ -19,20 +20,22 @@ jobs:
       run: |
         $CONDA/bin/conda install conda-build anaconda-client
     
-    - name: Build DECODE
-      run: |
-        cd ./conda
-        $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode
-
-    # need to test this part and see if it builds in their env
-
-
-    
-
-    # could have a pytest step here, with upload termination if it fails
-
-    # - name: Upload to Anaconda Cloud
+    # - name: Build DECODE
     #   run: |
-    #     # this is entirely wrong; needs correct paths from previous step,
-    #     #   plus needs secrets for login before upload; also needs logout?
-    #     $CONDA/bin/anaconda upload -u Turagalab /path/to/output/file/decode-blah-blah.tar.bz2
+    #     cd ./conda
+    #     $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode
+
+
+
+    # run conda build to determine what files were built and upload them
+    - name: Upload to Anaconda Cloud
+      env:
+        ANACONDA_TOKEN: ${{ secrets.TURAGALAB_ANACONDA_TOKEN }}
+        FILENAMES: temp-filenames.txt
+      run: |
+        conda-build -c conda-forge spline --output > $FILENAMES
+        echo conda-build --output:
+        while read PATH; do 
+          echo pretend anaconda upload -t token $PATH
+        done < $FILENAMES
+        
