--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -22,22 +22,20 @@ jobs:
     - name: Install conda build libraries
       run: |
         $CONDA/bin/conda install conda-build anaconda-client
-    
-    # - name: Build DECODE
-    #   run: |
-    #     cd ./conda
-    #     $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode
 
+    # build, then also store the file paths that were built    
+    - name: Build DECODE
+      run: |
+        cd ./conda
+        $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode
+        $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode --output > $FILENAMES
 
-
-    # run conda build to determine what files were built and upload them
+    # upload to Anaconda Cloud; keep step separate to minimize exposure of the token
     - name: Upload to Anaconda Cloud
       env:
         ANACONDA_TOKEN: ${{ secrets.TURAGALAB_ANACONDA_TOKEN }}
       run: |
         cd ./conda
-        $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode --output > $FILENAMES
-        echo conda-build --output:
         while read PATH; do 
           echo pretend anaconda upload -t token $PATH
         done < $FILENAMES
