--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -24,11 +24,11 @@ jobs:
         $CONDA/bin/conda install conda-build anaconda-client
 
     # build, then also store the file paths that were built    
-    - name: Build DECODE
-      run: |
-        cd ./conda
-        $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode
-        $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode --output > $FILENAMES
+    # - name: Build DECODE
+    #   run: |
+    #     cd ./conda
+    #     $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode
+    #     $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode --output > $FILENAMES
 
     # upload to Anaconda Cloud; keep step separate to minimize exposure of the token
     - name: Upload to Anaconda Cloud
@@ -36,7 +36,5 @@ jobs:
         ANACONDA_TOKEN: ${{ secrets.TURAGALAB_ANACONDA_TOKEN }}
       run: |
         cd ./conda
-        while read PATH; do 
-          echo pretend anaconda upload -t token $PATH
-        done < $FILENAMES
-        
+        echo this is a test file > testlib-0.9.4-np118py_0.tar.bz2
+        $CONDA/bin/anaconda upload -t $ANACONDA_TOKEN -u Turagalab testlib-0.9.4-np118py_0.tar.bz2
