--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -27,11 +27,11 @@ jobs:
         $CONDA/bin/conda install conda-build anaconda-client
 
     # build, then also store the file paths that were built    
-    # - name: Build DECODE
-    #   run: |
-    #     cd ./conda
-    #     $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode
-    #     $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode --output > $FILENAMES
+    - name: Build DECODE
+      run: |
+        cd ./conda
+        $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode
+        $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode --output > $FILENAMES
 
     # upload to Anaconda Cloud; keep step separate to minimize exposure of the token
     - name: Upload to Anaconda Cloud
