--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -40,5 +40,5 @@ jobs:
       run: |
         cd ./conda
         while read PATH; do 
-          $CONDA/bin/anaconda upload -t $ANACONDA_TOKEN -u Turagalab $PATH
+          $CONDA/bin/anaconda -t $ANACONDA_TOKEN upload -u Turagalab $PATH
         done < $FILENAMES
