--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -33,7 +33,7 @@ jobs:
         $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode
         $CONDA/bin/conda-build -c turagalab -c pytorch -c conda-forge decode --output > $FILENAMES
 
-    # upload to Anaconda Cloud; keep step separate to minimize exposure of the token
+    # upload to Anaconda Cloud; separate step to minimize exposure of the token
     - name: Upload to Anaconda Cloud
       env:
         ANACONDA_TOKEN: ${{ secrets.TURAGALAB_ANACONDA_TOKEN }}
