--- a/.github/workflows/test_packages.yml
+++ b/.github/workflows/test_packages.yml
@@ -28,12 +28,12 @@ jobs:
           pytest decode/test/test_assets_web.py
 
       - name: Raise issue when test failed
-          if: ${{ failure() }}
+          if: failure()
           uses: lowply/issue-from-template@v0.1.2
             with:
               IFT_TEMPLATE_NAME: web_availability.md
 
-      - name: keep only <= 1 of the automatic issues
+      - name: keep only max 1 of the automatic issues
         uses: lowply/auto-closer@v0.0.3
           with:
             AC_LABEL: auto_web
