Add token, rm python explicit

--- a/.github/workflows/test_packages.yml
+++ b/.github/workflows/test_packages.yml
@@ -15,7 +15,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.6
           mamba-version: "*"
           channels: conda-forge,defaults
           channel-priority: strict
@@ -31,10 +30,12 @@ jobs:
         if: failure()
         uses: lowply/issue-from-template@v0.1.2
         with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           IFT_TEMPLATE_NAME: web_availability.md
 
       - name: keep only max 1 of the automatic issues
         uses: lowply/auto-closer@0.0.3
         with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           AC_LABEL: auto_web
           AC_KEEP: 1
