Okay I need the channel here although I do not like this

--- a/.github/workflows/test_packages.yml
+++ b/.github/workflows/test_packages.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           mamba-version: "*"
+          channels: conda-forge,defaults
           channel-priority: strict
           activate-environment: decode_dev_cpu
           environment-file: environment_cpu.yaml
