--- a/decode/test/pytest.ini
+++ b/decode/test/pytest.ini
@@ -3,3 +3,4 @@ markers =
     plot: mark a test that outputs something graphical.
     slow: mark test as slow.
     web: mark a test to need web connection
+    webbig: will download large files.
