--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -11,6 +11,7 @@ jobs:
       run:
         shell: bash -l {0}
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
 
@@ -19,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # overwrites the python versionin the environment for the testing matrix
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set Python Version ${{ matrix.python-version }}
         run: |
           sed -i -E 's/(python=)(.*)/\1'${{ matrix.python-version }}'/' ./environment_cpu.yaml
           cat environment_cpu.yaml | grep python
@@ -32,6 +33,11 @@ jobs:
           channel-priority: strict
           activate-environment: decode_dev_cpu
           environment-file: environment_cpu.yaml
+      
+      - name: Install backport of importlib_resources
+        run: |
+          mamba install -y importlib_resources
+        if: matrix.python-version <= '3.6'
 
       # Run the specific test
       - name: Run pytest (without big web)
