Prepare for v1.7 and python 3.9 support

--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -46,7 +46,7 @@ requirements:
       - python >=3.6,<4
       - pytest
     commands:
-      - pytest --pyargs decode
+      - pytest -m "not webbig" -m "not slow" --pyargs decode
 
 about:
     home: https://github.com/TuragaLab/DECODE
