--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: decode
-  version: "0.9.4"  # do not modify by hand set and sync with bumpversion
+  version: "0.10.0.alpha.0"  # do not modify by hand set and sync with bumpversion
 
 source:
      - path: ../..
