--- a/.github/workflows/test_gateway.yml
+++ b/.github/workflows/test_gateway.yml
@@ -18,8 +18,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          mamba-version: "*"
-          channels: turagalab/label/dev,turagalab,pytorch,conda-forge,defaults
+          # mamba-version: "*"  # does not work reliably atm
+          # channels: turagalab/label/dev,turagalab,pytorch,conda-forge,defaults
           channel-priority: strict
           activate-environment: decode_dev_cpu
           environment-file: environment_cpu.yaml
