--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -21,6 +21,7 @@ jobs:
 
       # overwrites the python versionin the environment for the testing matrix
       - name: Set Python Version ${{ matrix.python-version }}
+        # hacky way to change the python version by temporariliy editing the environment file
         run: |
           sed -i -E 's/(python=)(.*)/\1'${{ matrix.python-version }}'/' ./environment_cpu.yaml
           cat environment_cpu.yaml | grep python
@@ -28,8 +29,8 @@ jobs:
       # overwrites the python version in the environment
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          mamba-version: "*"
-          channels: turagalab/label/dev,turagalab,pytorch,conda-forge,defaults
+          # mamba-version: "*"  # does not work reliably atm
+          # channels: turagalab/label/dev,turagalab,pytorch,conda-forge,defaults
           channel-priority: strict
           activate-environment: decode_dev_cpu
           environment-file: environment_cpu.yaml
