--- a/environment_cuda.yaml
+++ b/environment_cuda.yaml
@@ -23,7 +23,7 @@ dependencies:
   # actual package
   - python=3.9
   - pytorch=1.7.1
-  - cudatoolkit=10.1
+  - cudatoolkit
   - torchvision
   - click
   - deprecated
