Add decode state getter

--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - torchvision
     - click
     - deprecated
+    - gitpython>=3.1
     - h5py
     - importlib_resources
     - matplotlib
