--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -33,6 +33,7 @@ docs:
 
 # Below are changes respective to the distribution platform
 # Changes must be mapping style "old : new", additions can be in sequence format
+# Some special characters must be escaped and explicitely declared a string in a mapping
 pip:
   run:
     - pytorch=1.7.1 : torch=1.7.1
@@ -54,4 +55,4 @@ conda-build:
     - numpy {{ numpy }}
   run:
     - python >=3.6,<4
-    - numpy : {{ pin_compatible('numpy', max_pin='x.x') }}
+    - numpy : "{{ pin_compatible('numpy', max_pin='x.x') }}"
