--- a/decode/utils/reference_files/reference.yaml
+++ b/decode/utils/reference_files/reference.yaml
@@ -69,6 +69,9 @@ HyperParameter:
   learning_rate_scheduler_param:
     step_size: 10
     gamma: 0.9
+  auto_restart_params:
+    nr_restarts: 5
+    restart_treshold: 100
   max_number_targets: 250
   moeller_gradient_rescale: false
   opt_param:
