--- a/decode/utils/reference_files/reference.yaml
+++ b/decode/utils/reference_files/reference.yaml
@@ -81,6 +81,7 @@ InOut:
   calibration_file:  # spline calib
   experiment_out:  # main output dir
   model_init:
+  checkpoint:
 PostProcessing: NMS  # (blank) for no post-processing or LookUp, Consistency
 PostProcessingParam:
   raw_th: 0.5
