Fix test deselection

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -43,4 +43,4 @@ jobs:
       # Run the specific test
       - name: Run pytest (without big web and graphical output)
         run: |
-          pytest -m "not webbig" -m "not plot" decode/test
+          pytest -m "not (webbig or plot)" decode/test
