--- a/.github/workflows/unit_tests_future.yml
+++ b/.github/workflows/unit_tests_future.yml
@@ -1,4 +1,4 @@
-name: Unit Tests (Future)
+name: Unit Tests Future
 
 on:
   push:
@@ -18,12 +18,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up test environment
-        uses: ./.github/actions/setup_test_env
-        with:
-          python-version: ${{ matrix.python-version }}
+      - name: Set Python Version ${{ matrix.python-version }}
+        # hacky way to change the python version by temporariliy editing the environment file
+        run: |
+          sed -i -E 's/(python=)(.*)/\1'${{ matrix.python-version }}'/' ./environment_cpu.yaml
+          cat environment_cpu.yaml | grep python
 
-      # Run the specific test
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          channel-priority: strict
+          activate-environment: decode_dev_cpu
+          environment-file: environment_cpu.yaml
+
       - name: Run pytest (without big web and graphical output)
         run: |
           pytest -m "not (webbig or plot)" decode/test
