--- a/environment_cuda.yaml
+++ b/environment_cuda.yaml
@@ -1,9 +1,8 @@
-name: decode_dev_cuda
+name: decode_dev_cuda_pt_18
 
 channels:
   - turagalab/label/dev
-  - turagalab
-  - pytorch
+  - pytorch-nightly
   - conda-forge
   - defaults
 
@@ -21,10 +20,9 @@ dependencies:
   - sphinx_rtd_theme
 
   # actual package
-  - python=3.9
+  - python=3.8
   - pytorch=1.7.1
   - cudatoolkit
-  - torchvision
   - click
   - deprecated
   - gitpython>=3.1
